# Moran-Process

./: .gitignore  AI_CONTEXT.md  CLAUDE.md  CMakeLists.txt  CODE_ARCHITECTURE.md  GUI_MoranProcess.py  HPC_WORKFLOW.md  MoranProcess.py  MoranProcess_noGUI.py  OPTIMIZATION_NOTES.md  ORGANIZATION.md  PROJECT_OVERVIEW.md  README.md  REFACTORING_SUMMARY.md  RESEARCH_BACKGROUND.md  VSCODE_WEXAC_WORKFLOW.md  WORKFLOW.md  df_analysis.ipynb  environment.yml  evograph.py  example_usage.py  extreme_graphs.ipynb  extreme_graphs.py  gemini_script.py  main.py  merge_batches.py  ml_predictors.ipynb  ml_predictors_2.ipynb  moran.py  new_moran.py  population_graph.py  process_lab.py  process_run.py  pyproject.toml  run_random_graphs.py  run_random_graphs_test.py  sketches.py  step_temperature.py  submit_main.sh  task_list.md  (+2 more)
analysis/: README.md  analyse_tests.ipynb  analysis_utils.py  compare_random_vs_respiratory.ipynb  df_analysis.ipynb  experiment_analysis.ipynb  experiment_analysis_100nodes.ipynb
examples/: hpc_serialization_demo.py
graph_zoos/: extreme_graphs_all.joblib  extreme_maximize_LR_Fixation_Probability.joblib  extreme_maximize_LR_Fixation_Time.joblib  extreme_maximize_XGBOOST_Fixation_Probability.joblib  extreme_maximize_XGBOOST_Fixation_Time.joblib  extreme_minimize_LR_Fixation_Probability.joblib  extreme_minimize_LR_Fixation_Time.joblib  extreme_minimize_XGBOOST_Fixation_Probability.joblib  extreme_minimize_XGBOOST_Fixation_Time.joblib
hpc/: __init__.py  job_distribution.py  serialization.py  worker.py
hpc_output/: .gitkeep
hpc_temp/: .gitkeep  demo_graphs.pkl
(+65 files in other folders)
