[project]
name = "moran-process"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.4",
    "matplotlib>=3.10.8",
    "nbstripout>=0.8.2",
    "networkx>=3.6.1",
    "numpy<2",
    "pandas>=2.3.3",
    "pillow<11",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "xgboost>=3.1.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
